Feat: Add notifications and realtime score update with flutter web_socket_channel

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.2.3
+  stomp_dart_client: ^2.0.0
+  kafkabr: ^1.1.1
+  fkafka: ^2.0.1
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
